# shekhar_kafka_demo_spring_lang

./: KafkaCommands.txt  README.md
consumerkafkaa/: pom.xml
consumerkafkaa/src/main/java/com/shekhar/consumerkafkaa/: ConsumerkafkaaApplication.java
consumerkafkaa/src/main/java/com/shekhar/consumerkafkaa/exception/: RetryableException.java
consumerkafkaa/src/main/java/com/shekhar/consumerkafkaa/handler/: ProductCreatedEventHandler.java
consumerkafkaa/src/main/java/com/shekhar/consumerkafkaa/model/: CreateProductRestModel.java
consumerkafkaa/src/main/java/com/shekhar/consumerkafkaa/persistence/: ProductEntity.java  ProductRepository.java
consumerkafkaa/src/main/resources/: application.properties
consumerkafkaa/src/test/java/com/shekhar/consumerkafkaa/: ConsumerkafkaaApplicationTests.java  ProductConsumerIntegrationTest.java
producerkafka/: README.md  pom.xml
producerkafka/local-cluster-setup/: broker1.properties  broker2.properties  broker3.properties
producerkafka/src/main/java/com/shekhar/producerkafka/: ProducerkafkaApplication.java
producerkafka/src/main/java/com/shekhar/producerkafka/config/: KafkaConfig.java  OpenApiConfig.java
producerkafka/src/main/java/com/shekhar/producerkafka/model/: CreateProductRestModel.java
producerkafka/src/main/resources/: application.properties
producerkafka/src/test/java/com/shekhar/producerkafka/: ProducerkafkaApplicationTests.java
shekhar_kafka_agent/: .gitignore  config.yaml  kafka_agent.py  main.py  pyproject.toml  requirements.txt
(+4 files in other folders)
